--- a/TrackOrdersclient/app/src/main/res/layout/activity_track_order.xml
+++ b/TrackOrdersclient/app/src/main/res/layout/activity_track_order.xml
@@ -17,12 +17,7 @@
         android:paddingEnd="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/baseline_arrow_back_24"
-            app:tint="#ffffff" />
+
 
         <TextView
             android:layout_width="0dp"
@@ -33,13 +28,7 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Отмена"
-            android:textAllCaps="true"
-            android:textColor="#fff"
-            tools:ignore="TextSizeCheck" />
+
 
     </LinearLayout>
 
@@ -58,21 +47,7 @@
         app:layout_constraintBottom_toTopOf="@+id/viewDivider"
         app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />
 
-    <TextView
-        android:id="@+id/textEstimatedTime"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:gravity="center"
-        android:text="Расчетное время"
-        android:textAllCaps="true"
-        android:textColor="#616161"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toStartOf="@id/textOrderNumber"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />
+
 
     <TextView
         android:id="@+id/textOrderNumber"
@@ -87,21 +62,10 @@
         android:textColor="#616161"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/textEstimatedTime"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />
 
-    <TextView
-        android:id="@+id/textTime"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:gravity="center"
-        android:text="30 минут"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/textEstimatedTime"
-        app:layout_constraintStart_toStartOf="@id/textEstimatedTime"
-        app:layout_constraintTop_toBottomOf="@id/textEstimatedTime" />
+
 
     <TextView
         android:id="@+id/textOrder"
@@ -122,7 +86,7 @@
         android:layout_height="2dp"
         android:layout_marginTop="15dp"
         android:background="#8A8A8A"
-        app:layout_constraintTop_toBottomOf="@+id/textTime" />
+        app:layout_constraintTop_toBottomOf="@+id/textOrder" />
 
     <View
         android:id="@+id/viewOrderPlaced"
@@ -227,7 +191,7 @@
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginStart="30dp"
-        android:background="@drawable/shape_status_current"
+        android:background="@drawable/shape_status_completed"
         app:layout_constraintBottom_toBottomOf="@+id/imageOrderProcessed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageOrderProcessed" />
@@ -257,7 +221,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="-70dp"
         android:layout_marginEnd="10dp"
-        android:text="В пути"
+        android:text="Доставлено"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageOrderProcessed"
@@ -278,61 +242,7 @@
         app:layout_constraintStart_toStartOf="@+id/viewOrderConfirmed"
         app:layout_constraintTop_toBottomOf="@id/viewOrderConfirmed" />
 
-    <View
-        android:id="@+id/viewOrderReady"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="30dp"
-        android:alpha="0.5"
-        android:background="@drawable/shape_status_remaining"
-        app:layout_constraintBottom_toBottomOf="@+id/imageOrderReady"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageOrderReady" />
-
-    <ImageView
-        android:id="@+id/imageOrderReady"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toEndOf="@+id/viewOrderReady"
-        app:layout_constraintTop_toBottomOf="@+id/imageOrderProcessed" />
-
-    <View
-        android:id="@+id/viewReadySupporter"
-        android:layout_width="1dp"
-        android:layout_height="1dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageOrderReady"
-        app:layout_constraintEnd_toEndOf="@+id/imageOrderReady"
-        app:layout_constraintStart_toStartOf="@+id/imageOrderReady"
-        app:layout_constraintTop_toTopOf="@+id/imageOrderReady" />
-
-    <TextView
-        android:id="@+id/textOrderReady"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="-70dp"
-        android:layout_marginEnd="10dp"
-        android:text="Выдано"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageOrderReady"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageOrderReady"
-        app:layout_constraintTop_toTopOf="@+id/imageOrderReady" />
 
 
-    <View
-        android:id="@+id/view5"
-        android:layout_width="2dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:alpha="0.5"
-        android:background="#757575"
-        app:layout_constraintBottom_toTopOf="@+id/viewOrderReady"
-        app:layout_constraintEnd_toEndOf="@+id/viewOrderProcessed"
-        app:layout_constraintStart_toStartOf="@+id/viewOrderProcessed"
-        app:layout_constraintTop_toBottomOf="@id/viewOrderProcessed" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
